--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "electron": "^7.1.9",
-    "knex": "^0.20.8",
-    "moment": "^2.24.0"
+    "jquery": "^3.4.1"
   },
   "devDependencies": {
     "electron-rebuild": "^1.8.8"
