The user can now add their own custom tags using a modal window. Fully accessible with screen readers as well. Known issues: Escape key doesn't dismiss the modal as expected. Working on a fix as we speak.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "electron": "^7.1.9",
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "materialize-css": "^1.0.0-rc.2",
+    "wicg-inert": "github:wicg/inert"
   },
   "devDependencies": {
     "electron-rebuild": "^1.8.8"
